...
                                </collectionReusableView>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="collectionView--shopCollectionView"/>
                                </userDefinedRuntimeAttributes>
                            </collectionView>
...
                    </view>
                    <navigationItem key="navigationItem" title="Store" id="rb8-ZV-cIZ">
                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="wow-M6-dKL">
                            <connections>
                                <segue destination="oGT-Zp-IHt" kind="unwind" unwindAction="signOutWithSegue:" id="1iJ-u4-J9a"/>
...
                                <rect key="frame" x="15" y="30" width="30" height="30"/>
                                <color key="backgroundColor" red="0.88272303884048442" green="0.88471237695801785" blue="0.91506940817157356" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="button--shopDetailsBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="isZ-5X-j4y"/>
...
                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cey-x0-Ne8">
                                        <rect key="frame" x="45" y="0.0" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="button--shopDetailsCartButton"/>
                                        <state key="normal" image="shopping-cart"/>
                                        <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cH3-GQ-fPR">
                                <rect key="frame" x="140" y="320" width="95" height="30"/>
                                <state key="normal" title="Log in"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="oba-qg-wwE" eventType="touchUpInside" id="HF7-5V-oaL"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qXo-iM-Hcu">
                                <rect key="frame" x="20" y="190" width="335" height="30"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xt1-1m-lAh">
                                <rect key="frame" x="20" y="240" width="335" height="30"/>
                                <nil key="textColor"/>
...
                                                            <rect key="frame" x="302" y="8" width="25" height="25"/>
                                                            <color key="backgroundColor" red="0.92948027290000002" green="0.92828913040000005" blue="0.94909542339999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="button--cartDeleteItemButton"/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="25" id="N4E-Pi-gpE"/>
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="table--cartTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
...
